Snippets event from online 3 offline

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -139,8 +139,8 @@
                 "name": "Stefan Höhn",
                 "url": "https://stefan-höhn.de"
             },
-"eventAttendanceMode": "https://schema.org/OnlineEventAttendanceMode",
-"eventStatus": "https://schema.org/EventMovedOnline"           
+"eventAttendanceMode": "https://schema.org/OfflineEventAttendanceMode",
+"eventStatus": "https://schema.org/EventScheduled"           
 
 }
 ]</script>
