--- a/_includes/head.html
+++ b/_includes/head.html
@@ -110,7 +110,7 @@
   { "@context": "http://schema.org", 
 "@type": "Event",
 "name": "Wormser Linux User Stammtisch", 
-"startDate": "{{treffen.jahr}}-{{treffen.monat}}-{{ treffen.tag }}T18:30+01:00", 
+"startDate": "{{treffen.jahr}}-{{treffen.monat}}-{{ treffen.tag }}T{{treffen.start}}+01:00", 
 "location": { "@type": "Place", 
               "name":"Worms {{treffen.ort}}", 
               "address": { 
@@ -130,7 +130,7 @@
             "price": "0", 
             "priceCurrency": "€", 
             "availability": "http://schema.org/InStock", 
-            "validFrom": "{{ site.time | date: "%Y-%m-%d" }}T18:30+01:00"
+            "validFrom": "{{ site.time | date: "%Y-%m-%d" }}T17:30+01:00"
            }, 
 "performer": { "@type": "PerformingGroup", 
                "name": "Wormser Linux User Stammtisch" 
