--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
   
 
    <small>
-      Gemacht mit &lt;3 von <a href="https://stefan-höhn.de">Stefan Höhn</a> mail: <a href="mailto:wolust@untergang.de">wolust@untergang.de</a>&lt;/&gt;<a href="/datenschutz">Datenschutz</a>
+      Gemacht mit &lt;3 von <a href="https://stefan-höhn.de">Stefan Höhn</a> mail: <a href="mailto:wolust@untergang.de">wolust@untergang.de</a>&lt;/&gt; <a href="/datenschutz">Datenschutz</a> &lt;/&gt; {% github_edit_link "Online Editor" %}
    </small>
 
   </div>
