--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,7 @@
     <title>{% if page.title %}{{ page.title | strip_html }} &#8211; {% endif %}{{ site.title | strip_html }}</title>
     <link rel="dns-prefetch" href="//maxcdn.bootstrapcdn.com">
     <link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
+    <link rel="manifest" type="application/manifest+json; charset=utf-8" href="{{ "/manifest.json" | relative_url }}" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- <meta name="description" content="{% if page.description %}{{ page.description | xml_escape | prepend: ' ' | prepend: page.summary | xml_escape }}{% else %}{{ site.description | xml_escape }}{% endif %}"> -->
     {% assign next = site.data.daten.linuxuser[0] %}
