--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,3 +19,8 @@
     };
     anchors.add('.post-content');
 </script>
+<script type="text/javascript">
+    if ("serviceWorker" in navigator) {
+      navigator.serviceWorker.register("{{ '/sw.js' | relative_url }}")
+    }
+</script>
