--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,6 +10,8 @@
 </footer>
 
 <!-- AnchorJS -->
+
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/3.0.0/anchor.min.js"></script>
 <script>
     anchors.options = {
@@ -17,7 +19,7 @@
     placement: 'left',
     icon: '⚓️'
     };
-    anchors.add('.post-content');
+    anchors.add('.post-content ul');
 </script>
 <script type="text/javascript">
     if ("serviceWorker" in navigator) {
