--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
 <script>
     anchors.options = {
     visible: 'always',
-    placement: 'left',
+    placement: 'right',
     icon: '⚓️'
     };
     anchors.add('.post-content ul');
