--- a/_includes/fortune.html
+++ b/_includes/fortune.html
@@ -18,7 +18,8 @@ var myArray = [
   "In the long run, every program becomes rococco, and then rubble.",
   "You are false data.",
   "Due to lack of disk space, this fortune database has been discontinued.",
-  "Kein Backup,kein Mitleid.",
+  "Kein Backup, kein Mitleid.",
+  "Ich bin ROOT, ich darf das.",
   "The first version always gets thrown away."
 ];
 var randomitem = myArray[Math.floor(Math.random()*myArray.length)];
