Einzeiler wie lang?

--- a/_includes/fortune.html
+++ b/_includes/fortune.html
@@ -19,6 +19,7 @@ var myArray = [
   "You are false data.",
   "Due to lack of disk space, this fortune database has been discontinued.",
   "Kein Backup, kein Mitleid.",
+  "Wie lange darf der Einzeiler denn werden? 80 Zeichen?",
   "Ich bin ROOT, ich darf das.",
   "The first version always gets thrown away."
 ];
