--- a/_includes/fortune.html
+++ b/_includes/fortune.html
@@ -21,6 +21,7 @@ var myArray = [
   "Kein Backup, kein Mitleid.",
   "Wie lange darf der Einzeiler denn werden? 80 Zeichen?",
   "Ich bin ROOT, ich darf das.",
+  "Um Rekursion zu verstehen, muss man Rekursion verstehen.",
   "The first version always gets thrown away."
 ];
 var randomitem = myArray[Math.floor(Math.random()*myArray.length)];
