--- a/_includes/fortune.html
+++ b/_includes/fortune.html
@@ -22,6 +22,7 @@ var myArray = [
   "Wie lange darf der Einzeiler denn werden? 80 Zeichen?",
   "Ich bin ROOT, ich darf das.",
   "Um Rekursion zu verstehen, muss man Rekursion verstehen.",
+  "Es gibt 10 Arten von Menschen, die, die das binäre System verstehen und die, die es nicht verstehen.",
   "The first version always gets thrown away."
 ];
 var randomitem = myArray[Math.floor(Math.random()*myArray.length)];
