--- a/_includes/head.html
+++ b/_includes/head.html
@@ -109,7 +109,7 @@
     </script>
     {% endif %}
     
-   {% if page.title == "Nächster Wolust" %}
+   {% if page.title == "Nächster Wolust"or"index &#8211; Wormser Linux User Stammtisch" %}
    
      
 
@@ -160,21 +160,7 @@
    
   {% endif %} 
  
- {% if page.title contains "index" %}
-<script type="application/ld+json">
-	{
-	  "@context": "https://schema.org",
-	  "@type": "Course",
-	  "name": "Wormser Linux User in der Cloud",
-	  "description": "Stammtisch findet in der Cloud statt. Ein festes Thema gibt es nicht. Linux übers Internet. ",
-	  "provider": {
-		"@type": "Organization",
-		"name": "Volkshochschule Worms",
-		"sameAs": "https://www.vhs-worms.de/"
-	}
-	}
-	</script>
- {% endif %} 
+
  
  
  
