Wähtung ist EUR

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -136,7 +136,7 @@
 "offers": { "@type": "Offer", 
             "url": "https://wolust.de", 
             "price": "0", 
-            "priceCurrency": "€", 
+            "priceCurrency": "EUR", 
             "availability": "http://schema.org/InStock", 
             "validFrom": "{{ site.time | date: "%Y-%m-%d" }}T17:30+01:00"
            }, 
