--- a/_includes/head.html
+++ b/_includes/head.html
@@ -193,7 +193,7 @@
    {% if page.title == "Stadtplan" %}
    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css" integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14=" crossorigin=""/>
    <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js" integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg=" crossorigin=""></script>
-   
+   <style>
 		html, body {
 			height: 100%;
 			margin: 0;
