--- a/_includes/head.html
+++ b/_includes/head.html
@@ -121,7 +121,7 @@
 "name": "Wormser Linux User Stammtisch", 
 "startDate": "{{treffen.jahr}}-{{treffen.monat}}-{{ treffen.tag }}T{{treffen.start}}+01:00", 
 "location": { "@type": "Place", 
-              "name":"Worms {{treffen.ort}}", 
+              "name": "{{treffen.ort}}",
               "address": { 
                           "@type": "PostalAddress", 
                           "streetAddress": "{{treffen.strasse}}", 
@@ -148,7 +148,7 @@
                 "name": "Stefan Höhn",
                 "url": "https://stefan-höhn.de"
             },
-"eventAttendanceMode": "https://schema.org/OnlineEventAttendanceMode",
+"eventAttendanceMode": "https://schema.org/OfflineEventAttendanceMode",
 "eventStatus": "https://schema.org/EventScheduled"           
 
 }
