jdon-ld   organization

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -116,7 +116,7 @@
 <script type="application/ld+json">
 {
 "@context": "https://schema.org",
-"@type": "InformAction",
+"@type": "Organization",
 "event": [
  {% for treffen in site.data.daten.linuxuser %}
 
