json Ld verbesserungen

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -117,7 +117,7 @@
 {
 "@context": "https://schema.org",
 "@type": "Organization",
-"event": [
+"events": [
  {% for treffen in site.data.daten.linuxuser %}
 
 
@@ -161,7 +161,17 @@
 }
 ],
         "image": "https://wolust.de/images/tux-wolust.jpg",
-        "name": "Wormser Linux User Stammtisch"
+        "name": "Wormser Linux User Stammtisch",
+        "logo": "https://wolust.de/images/logo.png",
+        "description": "Wormser Linux User Stammtisch Austausch über Erfahrungen mit diesem Betriebssystem",
+        "address": {
+                    "@type": "PostalAddress",
+                    "streetAddress": "Götzstr.6",
+                    "addressLocality": "Worms",
+                    "addressRegion": "RLP",
+                    "postalCode": "67547",
+                    "addressCountry": "Germany"
+                    }
 }
 </script>
    
