--- a/_includes/head.html
+++ b/_includes/head.html
@@ -117,6 +117,9 @@
 {
 "@context": "https://schema.org",
 "@type": "Organization",
+"url": "https://wolust.de",
+"logo": "https://wolust.de/images/logo.png",
+
 "events": [
  {% for treffen in site.data.daten.linuxuser %}
 
