--- a/_includes/head.html
+++ b/_includes/head.html
@@ -53,6 +53,7 @@
     {% endif %}
     <!-- Browser Cache verhindern 060324 dewomser -->
     <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="expires" content="0" />
     <meta http-equiv="pragma" content="no-cache" />
     <!-- SEO -->
     <!-- Open Graph -->
