in event +01:00  entfernt. das ist Winterzeit
Zeitzone wird laut Google  automatisch erkannt. Nur wichtig bei online events

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -129,7 +129,7 @@
 
 {
 "name": "Wormser Linux User Stammtisch", 
-"startDate": "{{treffen.jahr}}-{{treffen.monat}}-{{ treffen.tag }}T{{treffen.start}}+01:00", 
+"startDate": "{{treffen.jahr}}-{{treffen.monat}}-{{ treffen.tag }}T{{treffen.start}}", 
 "location": { "@type": "Place", 
               "name": "{{treffen.ort}}",
               "address": { 
