enddate und validfrom +01:00 entfernt.
wird automatisch erkannt. ist Winterzeit und muss deshalb weg Json+ld

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -143,13 +143,13 @@
              }, 
 "image": "{{ site.url }}/images/tux-wolust.jpg", 
 "description": "Wormser Linux User treffen sich einmal im Monat. Wenn du Interesse an Linux hast, komm vorbei und setz dich dazu !", 
-"endDate": "{{treffen.jahr}}-{{treffen.monat}}-{{ treffen.tag }}T22:00+01:00", 
+"endDate": "{{treffen.jahr}}-{{treffen.monat}}-{{ treffen.tag }}T22:00", 
 "offers": { "@type": "Offer", 
             "url": "https://wolust.de", 
             "price": "0", 
             "priceCurrency": "EUR", 
             "availability": "http://schema.org/InStock", 
-            "validFrom": "{{ site.time | date: "%Y-%m-%d" }}T17:30+01:00"
+            "validFrom": "{{ site.time | date: "%Y-%m-%d" }}T17:30"
            }, 
 "performer": { "@type": "PerformingGroup", 
                "name": "Wormser Linux User Stammtisch" 
