Kalender jetzt mit webcal;//

--- a/_includes/social_links.html
+++ b/_includes/social_links.html
@@ -1,7 +1,7 @@
 <div class="social-icons">
   <div class="social-icons-right">
   
-    <a class="fa fa-calendar" href="{{ site.url }}/wolust.ics"></a>
+    <a class="fa fa-calendar" href="webcal://wolust.de/wolust.ics"></a>
     {% if site.github_username %}
       <a class="fa fa-github" href="https://github.com/{{ site.github_username }}"></a>
     {% endif %}
