--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -41,3 +41,15 @@ body, .main-wrapper, .container {
 a {
   color: #4fd1c5;
 }
+
+/* Make navbar logo bigger */
+.navbar__logo {
+  height: 56px !important;
+  min-width: 56px !important;
+  margin-right: 50px;
+}
+.navbar__logo img {
+  height: 56px !important;
+  max-height: 56px !important;
+  width: auto !important;
+}
