chore: increase navbar link font size for better readability

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -30,6 +30,7 @@ html[data-theme='dark'] {
 
 .navbar__link, .navbar__title {
   color: var(--ifm-navbar-link-color);
+  font-size: 1.15rem;
 }
 
 body, .main-wrapper, .container {
