gemini-cli hat im Code rumgewurschtelt. Ich hab das mir angeguckz . Soll so funktionieren

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@ change();
 </div>
        <nav class="site-nav.left">
       <span>
-      <a href="{{ site.url }}">Index</a>
+      <a href="{{ site.baseurl }}/">Index</a>
       </span>
       
       <span class="site-nav">
@@ -20,7 +20,7 @@ change();
       </span> 
       </nav>          
       <h1 class="site-title">
-          <a href="{{ site.url }}"><img id="logo" src="{{ site.url }}/images/logo.png" alt="Wolust Logo"/>
+          <a href="{{ site.baseurl }}/"><img id="logo" src="{{ site.baseurl }}/images/logo.png" alt="Wolust Logo"/>
           {{ site.title }}</a>
       </h1>
       <div class="clearfix"></div>
